syntax = "proto3";

option go_package = "github.com/swinarga/tf2outpost-mock/inventory";

service InventoryService {
    rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
}

message GetInventoryRequest{
    uint64 id = 1; // steam ID
}

message Item {
    uint64 id = 1;
    uint64 original_id = 2;
    uint32 defindex = 3;
    uint32 level = 4;
    uint32 quality = 5;
    uint32 quantity = 6;
    optional string custom_name = 7;
    optional string custom_description = 8;
    bool is_tradable = 9;
    bool is_craftable = 10;
    repeated Attribute attributes = 11;
}

message Attribute {
    uint32 defindex = 1;
    int64 value_int = 2; // not sure if value can be negative
    string value_string = 3;
    bool is_int = 4;
    double float_value = 5;
}


message GetInventoryResponse{
    uint64 steam_id = 1;
    uint32 num_backpack_slots = 2;
    repeated Item items = 3;
}